base.css line 750 fixed body and html overflow-x

--- a/css/base.css
+++ b/css/base.css
@@ -746,3 +746,7 @@ details[open] > summary {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+body,html{
+  overflow-x: hidden;
+}
